@@ -245,22 +245,14 @@ book_tree_find_uri_foreach (GtkTreeModel *model,
 			    FindURIData  *data)
 {
 	DhLink      *link;
-	const gchar *uri;
         gchar       *link_uri;
 
 	gtk_tree_model_get (model, iter,
 			    COL_LINK, &link,
 			    -1);
 
-	/* A bit hackish, could be made more generic. */
-	if (g_str_has_prefix (data->uri, "file://")) {
-		uri = data->uri + 7;
-	} else {
-		uri = data->uri;
-	}
-
         link_uri = dh_link_get_uri (link);
-	if (g_str_has_prefix (uri, link_uri)) {
+	if (g_str_has_prefix (data->uri, link_uri)) {
 		data->found = TRUE;
 		data->iter = *iter;
 		data->path = gtk_tree_path_copy (path);
